--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=validate
 #spring.datasource.url=jdbc:mysql://db:3306/db_maxi
 #spring.datasource.username=maxiuser
 #spring.datasource.password=qwerty123
