--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create
 #spring.datasource.url=jdbc:mysql://db:3306/db_maxi
 #spring.datasource.username=maxiuser
 #spring.datasource.password=qwerty123
@@ -7,6 +7,6 @@ spring.datasource.username=testuser
 spring.datasource.password=testuser
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.jpa.show-sql=true
+spring.jpa.show-sql=true
 
-xml.dir = checks
+check.directory=src/main/resources/checks
