--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,9 @@
 spring.jpa.hibernate.ddl-auto=create
-#spring.datasource.url=jdbc:mysql://db:3306/db_maxi
-#spring.datasource.username=maxiuser
-#spring.datasource.password=qwerty123
-spring.datasource.url=jdbc:postgresql://localhost:5432/db_maxi
-spring.datasource.username=testuser
-spring.datasource.password=testuser
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.show-sql=true
-
+spring.datasource.url=jdbc:mysql://localhost:3306/db_maxi
+spring.datasource.username=maxiuser
+spring.datasource.password=qwerty123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 check.directory=src/main/resources/checks
+oldcheck.directory=src/main/resources/checks-old
+#spring.jpa.show-sql=true
