--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.username=maxiuser
 spring.datasource.password=qwerty123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-check.directory=src/main/resources/checks
-oldcheck.directory=src/main/resources/checks-old
 #spring.jpa.show-sql=true
+
+check.directory=src/main/resources/checks
+check.old.directory=src/main/resources/checks-old
